# problems

./: README.md
codeforces/001/: A - Театральная площадь.py
codeforces/004/: A - Арбузы.py
codeforces/009/: A - Бросок кубика.py
codeforces/050/: A - Укладка доминошками.py
codeforces/061/: A - Быстрый математик.hs  A - Быстрый математик.py
codeforces/071/: A - Слишком длинные слова.hs  A - Слишком длинные слова.py
codeforces/082/: A - DoubleCola.hs  A - DoubleCola.py
codeforces/096/: A - Футбол.hs  A - Футбол.py
codeforces/112/: A - Петя и строки.py
codeforces/116/: A - Трамвай.hs  A - Трамвай.py
codeforces/118/: A - Упражнение на строки.py  B - Подарок от Лены .hs  B - Подарок от Лены.py
codeforces/119/: A - Эпическая игра.hs  A - Эпическая игра.py
codeforces/122/: A - Счастливое деление.hs  A - Счастливое деление.py
codeforces/124/: A - Количество позиций.py
codeforces/131/: A - cAPS lOCK.py
codeforces/133/: A - HQ9+.py
codeforces/136/: A - Подарки.py
codeforces/141/: A - Веселая шутка.py
codeforces/148/: A - Средство от бессоницы.py
codeforces/151/: A - Газировкопитие.py
codeforces/158/: A - Следующий раунд.hs  A - Следующий раунд.py
euler/: 001.hs  002.hs  003.hs  004.hs  005.hs  006.hs  008.hs  010.hs  013.hs  015.hs  020.hs  AUTHORS  euler.cabal
euler/src/Euler/: Common.hs  S000.hs
euler/src/S000/: 007.hs  009.hs  025.hs
spoj/0000/: 0001 - Life, the Universe, and Everything.hs
